# jagger

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
doc/: file_configuration.md
include/jagger/: jagger.h
scripts/: build_and_test.sh
src/: CMakeLists.txt  config_loader.cpp  config_loader.h  jagger.cpp  rolling.cpp  rolling.h
tests/: CMakeLists.txt  config_file_test.cpp  config_loader_test.cpp  fake_inis.cpp  fake_inis.h  init_jagger_test.cpp  lib_test.cpp  logging_jagger_test.cpp  main.cpp  rolling_log_jagger_test.cpp  test_init_jagger.cpp  testlib.cpp  utils.cpp  utils.h
